--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-	<script src="md5.js"></script>
-	<script src="pg.js"></script>
-	<script src="index.js"></script>
+	<script src="node_modules/md5.js/index.js"></script>
+	<script src="dist/pg.js"></script>
+	<script src="test.js"></script>
     </head>
 </html>
